tests/failing/LiftAbstractParamMissing.run
ghc -dcore-lint -package ghc -itests --make tests/failing/LiftAbstractParamMissing.hs -main-is LiftAbstractParamMissing >/dev/null &&
tests/LiftAbstractParamMissing
